[package]
name = "gib_runes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.17"
colored = "2.1.0"
process-memory = "0.5.0"
rand = "0.8.5"
sysinfo = "0.30.5"
windows = { version = "0.56.0", features = [
  "Win32_Foundation",
  "Win32_System",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
] }
